# learnWithSpark

./: .gitignore  PLAN.md  README.md
backend/: .env.example  app.py  frontend_levels.py  levels_db.py  llm.py  pipeline.py  pyproject.toml  run.py  state.py
backend/nodes/: __init__.py  coding.py  guardrail.py  publish.py  research.py  research_gate.py  safety_gate.py  terminals.py  testing.py
frontend/: index.html  package-lock.json  package.json
frontend/public/assets/spark/: README.md
frontend/src/: App.tsx  index.css
frontend/src/game/: Spark.tsx  types.ts
frontend/src/game/levels/: Spark.tsx  index.ts  lesson1-see.tsx  lesson2-spark-s-sentence-helper.tsx  lesson3-which-one-doesn-t-belong.tsx  published-levels.json  types.ts
frontend/src/playtest/: Playtest.tsx
