[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.2",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
